--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@inertiajs/progress": "^0.2.7",
         "@inertiajs/server": "^0.1.0",
         "@vue/server-renderer": "^3.2.33",
+        "notiwind": "^1.2.5",
         "vue": "^3.2.32",
         "webpack-node-externals": "^3.0.0"
     }
