--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "inertiajs/inertia-laravel": "^0.5.4",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
