--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@formkit/themes": "^1.0.0-beta.10",
         "@formkit/vue": "^1.0.0-beta.10",
         "@headlessui/vue": "^1.6.2",
         "@heroicons/vue": "^1.0.6",
