--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "vue": "^3.2.32",
         "vue-sweetalert2": "^5.0.5",
         "vue-tippy": "^6.0.0-alpha.63",
+        "vue3-carousel": "^0.2.0",
         "webpack-node-externals": "^3.0.0"
     }
 }
