--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-loader": "^16.8.3"
     },
     "dependencies": {
+        "@chenfengyuan/vue-number-input": "^2.0.1",
         "@formkit/themes": "^1.0.0-beta.10",
         "@formkit/vue": "^1.0.0-beta.10",
         "@headlessui/vue": "^1.6.2",
@@ -38,7 +39,7 @@
         "@vue/server-renderer": "^3.2.33",
         "@vuepic/vue-datepicker": "^3.2.0",
         "notiwind": "^1.2.5",
-        "vue": "^3.2.32",
+        "vue": "^3.2.40",
         "vue-sweetalert2": "^5.0.5",
         "vue-tippy": "^6.0.0-alpha.63",
         "vue3-carousel": "^0.2.0",
