--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@vue/server-renderer": "^3.2.33",
         "@vuepic/vue-datepicker": "^3.2.0",
         "notiwind": "^1.2.5",
+        "pinia": "^2.0.23",
         "vue": "^3.2.40",
         "vue-sweetalert2": "^5.0.5",
         "vue-tippy": "^6.0.0-alpha.63",
