--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,13 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.5.4",
         "itsgoingd/clockwork": "^5.1",
+        "jomweb/billplz": "4.4",
+        "jomweb/billplz-laravel": "^2.2",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
+        "php-http/guzzle7-adapter": "^1.0",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
