--- a/.env.example
+++ b/.env.example
@@ -35,9 +35,9 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_ENCRYPTION=tls
-MAIL_USERNAME=a.azim0711@gmail.com
-MAIL_PASSWORD=cymohkgkxvukvkje
-MAIL_FROM_ADDRESS=a.azim0711@gmail.com
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
