--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "php-http/guzzle7-adapter": "^1.0",
+        "predis/predis": "^2.3",
         "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
